Remove "SOLIDARITY" from title and header of the weekly class schedule

--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Weekly Class Schedule - SOLIDARITY</title>
+  <title>Weekly Class Schedule</title>
   <style>
     body {
       font-family: sans-serif;
@@ -40,7 +40,7 @@
 </head>
 <body>
 
-  <h1>📚 Weekly Class Schedule (SOLIDARITY Section)</h1>
+  <h1>📚 Weekly Class Schedule</h1>
 
   <h2>Monday</h2>
   <table>
