--- a/schedule.html
+++ b/schedule.html
@@ -5,38 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Weekly Class Schedule</title>
   <style>
-    body {
-      font-family: sans-serif;
-      margin: 2rem;
-      background: #f9f9f9;
-      color: #333;
+  body {
+    font-family: sans-serif;
+    margin: 2rem;
+    background: #f9f9f9;
+    color: #333;
+  }
+
+  h1, h2 {
+    text-align: center;
+    color: #444;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 2rem;
+    background: #fff;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    animation: fadeInUp 0.6s ease both;
+  }
+
+  th, td {
+    border: 1px solid #ddd;
+    padding: 0.75rem;
+    text-align: left;
+    min-width: 100px;
+    max-width: 300px;
+    word-wrap: break-word;
+  }
+
+  /* th {
+    background-color: #f0f0f0;
+  } */
+
+  th {
+  background-color: #f0f0f0;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+
+
+  tr:hover {
+    background-color: #f5f5f5;
+    transition: background-color 0.3s ease;
+  }
+
+  .onsite::before {
+    content: "🏫 ";
+  }
+
+  .online::before {
+    content: "🌐 ";
+  }
+
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
     }
-    h2 {
-      margin-top: 2rem;
-      color: #444;
+    to {
+      opacity: 1;
+      transform: translateY(0);
     }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 2rem;
-      background: #fff;
-      box-shadow: 0 0 4px rgba(0,0,0,0.1);
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 0.75rem;
-      text-align: left;
-    }
-    th {
-      background-color: #f0f0f0;
-    }
-    .onsite::before {
-      content: "🏫 ";
-    }
-    .online::before {
-      content: "🌐 ";
-    }
-  </style>
+  }
+</style>
+
 </head>
 <body>
 
