--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
     showQuote();
     setInterval(showQuote, 5000);
   </script>
-  <!-- responsive link to `schedule.html` at the bottom of the page, below `div class="poster"` ; should always be visible no matter how the browser window is resized-->
+  <!-- responsive link to `schedule.html` at the bottom of the page, below `div class="poster"` ; should always be visible no matter how the browser window is resized
   <div class="responsive-link">
     <a href="schedule.html" style="display: block; text-align: center; padding: 1rem; background-color: #333; color: white; text-decoration: none; font-weight: bold;">View Weekly Class Schedule</a>
   </div>
-
+-->
 </body>
 </html>
